# VitaTester

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
icons/: analog.png.h  background.png.h  circle.png.h  cross.png.h  dpad.png.h  finger_blue.png.h  finger_gray.png.h  ltrigger.png.h  rtrigger.png.h  select.png.h  square.png.h  start.png.h  test.sh  triangle.png.h
src/: font.c  main.c
